@@ -1189,9 +1189,9 @@ See <<UserAccountChanged>>
 Accounts are automatically added to `User` properties in events
 
 | https://ircv3.net/specs/extensions/away-notify-3.1.html[away-notify] v3.1
-| {set:cellbgcolor:#eeeeaa} Partial support
+| {set:cellbgcolor:#a7eeaa} Supported
 | {set:cellbgcolor!}
-See <<UserAway>>. State not yet tracked.
+See <<UserAway>>.
 
 | https://ircv3.net/specs/extensions/batch-3.2.html[batch] v3.2
 | {set:cellbgcolor:#a7eeaa} Supported
